crates/toml_edit/tests/snapshots/invalid/string/multiline-bad-escape-04.stderr
TOML parse error at line 1, column 21
  |
1 | backslash = """\"""
  |                     ^
invalid multi-line basic string, expected `"`
